--- a/index.html
+++ b/index.html
@@ -2,67 +2,197 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Ozan Muratoglu | Computer Engineer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ozan Muratoğlu | Computer Engineer</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-  />
-  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <style>
     body {
+      margin: 0;
       font-family: 'Inter', sans-serif;
+      background: linear-gradient(to right, #667eea, #764ba2);
+      color: white;
+      text-align: center;
+    }
+
+    .container {
+      padding: 40px 20px;
+    }
+
+    .card {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 20px;
+      border-radius: 20px;
+      margin: 20px auto;
+      max-width: 1000px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+    }
+
+    h1 {
+      font-size: 2.5em;
+      margin-bottom: 10px;
+    }
+
+    h2 {
+      font-size: 1.8em;
+      margin-bottom: 20px;
+    }
+
+    .subtitle {
+      font-size: 1.2em;
+      opacity: 0.8;
+    }
+
+    .buttons {
+      margin-top: 20px;
+    }
+
+    .buttons a {
+      margin: 5px;
+      padding: 10px 20px;
+      background: #ffffff22;
+      border: none;
+      color: white;
+      text-decoration: none;
+      border-radius: 8px;
+      font-weight: 600;
+      transition: background 0.3s;
+    }
+
+    .buttons a:hover {
+      background: #ffffff44;
+    }
+
+    .about-section {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+
+    @media(min-width: 768px) {
+      .about-section {
+        flex-direction: row;
+        justify-content: space-around;
+      }
+    }
+
+    .about-box {
+      flex: 1;
+      padding: 10px;
+    }
+
+    .skills {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
+      margin-top: 20px;
+    }
+
+    .skill-item {
+      background: rgba(255, 255, 255, 0.12);
+      border-radius: 20px;
+      padding: 20px;
+      transition: all 0.3s ease;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+    }
+
+    .skill-item:hover {
+      background: rgba(255, 255, 255, 0.2);
+      transform: translateY(-5px);
+    }
+
+    .skill-item i {
+      font-size: 2.5em;
+      margin-bottom: 15px;
+      color: #fff;
+    }
+
+    .skill-title {
+      font-weight: bold;
+      margin-bottom: 5px;
+      font-size: 1.1em;
+    }
+
+    .skill-desc {
+      font-size: 0.9em;
+      opacity: 0.85;
     }
   </style>
 </head>
-<body class="bg-gray-50 text-gray-800">
-  <div class="min-h-screen flex flex-col items-center justify-center p-6">
-    <!-- Header -->
-    <header class="text-center mb-10">
-      <h1 class="text-4xl md:text-5xl font-extrabold">Ozan Muratoglu</h1>
-      <p class="text-xl text-indigo-600 mt-2">Computer Engineer</p>
-    </header>
-
-    <!-- About Me -->
-    <section class="max-w-3xl text-center mb-10">
-      <h2 class="text-2xl font-semibold mb-4">About Me</h2>
-      <p class="text-gray-700 text-lg leading-relaxed">
-        I am a newly graduated computer engineer with a specialization in Information Technology and Cybersecurity. Passionate about building secure, scalable systems and constantly learning new technologies.
-      </p>
-    </section>
-
-    <!-- Skills -->
-    <section class="max-w-3xl text-center mb-10">
-      <h2 class="text-2xl font-semibold mb-4">Skills</h2>
-      <div class="flex flex-wrap justify-center gap-4 text-sm md:text-base text-gray-600">
-        <span class="bg-white border border-gray-200 px-4 py-2 rounded-xl shadow-sm">C</span>
-        <span class="bg-white border border-gray-200 px-4 py-2 rounded-xl shadow-sm">C#</span>
-        <span class="bg-white border border-gray-200 px-4 py-2 rounded-xl shadow-sm">C++</span>
-        <span class="bg-white border border-gray-200 px-4 py-2 rounded-xl shadow-sm">Java</span>
-        <span class="bg-white border border-gray-200 px-4 py-2 rounded-xl shadow-sm">Python</span>
-        <span class="bg-white border border-gray-200 px-4 py-2 rounded-xl shadow-sm">Machine Learning</span>
-        <span class="bg-white border border-gray-200 px-4 py-2 rounded-xl shadow-sm">Unity 3D/VR</span>
-        <span class="bg-white border border-gray-200 px-4 py-2 rounded-xl shadow-sm">Web Development</span>
-        <span class="bg-white border border-gray-200 px-4 py-2 rounded-xl shadow-sm">Network Management</span>
-        <span class="bg-white border border-gray-200 px-4 py-2 rounded-xl shadow-sm">Git & GitHub</span>
-        <span class="bg-white border border-gray-200 px-4 py-2 rounded-xl shadow-sm">Windows - Linux</span>
-        <span class="bg-white border border-gray-200 px-4 py-2 rounded-xl shadow-sm">Cybersecurity</span>
+<body>
+  <div class="container">
+    <div class="card">
+      <h1>Ozan Muratoğlu</h1>
+      <div class="subtitle">Computer Engineer | Bilgisayar Mühendisi</div>
+      <div class="buttons">
+        <a href="mailto:ozanmuratoglu06@gmail.com"><i class="fas fa-envelope"></i> Email</a>
+        <a href="https://www.linkedin.com/in/ozanmuratoglu/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
       </div>
-    </section>
+    </div>
 
-    <!-- Contact -->
-    <footer class="text-center mt-10">
-      <h2 class="text-xl font-semibold mb-4">Contact</h2>
-      <div class="flex justify-center gap-12 text-gray-700 text-4xl">
-        <a href="mailto:ozanmuratoglu06@gmail.com" class="hover:text-red-600 transition" aria-label="Send email">
-          <i class="fas fa-envelope"></i>
-        </a>
-        <a href="https://www.linkedin.com/in/ozanmuratoglu/" target="_blank" rel="noopener noreferrer" class="hover:text-blue-700 transition" aria-label="LinkedIn profile">
-          <i class="fab fa-linkedin"></i>
-        </a>
+    <div class="card">
+      <h2>About Me | Hakkımda</h2>
+      <div class="about-section">
+        <div class="about-box">
+          <h3>English</h3>
+          <p>I am a newly graduated Computer Engineer with a strong interest in IT, cybersecurity, and software development. I enjoy solving complex problems, learning new technologies, and building practical solutions that make an impact.</p>
+        </div>
+        <div class="about-box">
+          <h3>Türkçe</h3>
+          <p>IT, siber güvenlik ve yazılım geliştirmeye yoğun ilgi duyan yeni mezun bir Bilgisayar Mühendisiyim. Karmaşık problemleri çözmekten, yeni teknolojiler öğrenmekten ve etki yaratan pratik çözümler inşa etmekten keyif alıyorum.</p>
+        </div>
       </div>
-    </footer>
+    </div>
+
+    <div class="card">
+      <h2>Skills & Expertise | Yetenekler</h2>
+      <div class="skills">
+        <div class="skill-item">
+          <i class="fas fa-brain"></i>
+          <div class="skill-title">Machine Learning</div>
+          <div class="skill-desc">AI, Model Training & Data Analysis</div>
+        </div>
+        <div class="skill-item">
+          <i class="fas fa-code"></i>
+          <div class="skill-title">Programming</div>
+          <div class="skill-desc">C, C++, C#, Java, Python</div>
+        </div>
+        <div class="skill-item">
+          <i class="fas fa-globe"></i>
+          <div class="skill-title">Web Development</div>
+          <div class="skill-desc">HTML, CSS, JavaScript</div>
+        </div>
+        <div class="skill-item">
+          <i class="fas fa-network-wired"></i>
+          <div class="skill-title">Network Management</div>
+          <div class="skill-desc">TCP/IP, Routing, Subnetting</div>
+        </div>
+        <div class="skill-item">
+          <i class="fab fa-unity"></i>
+          <div class="skill-title">Unity 3D / VR</div>
+          <div class="skill-desc">Game & XR Development</div>
+        </div>
+        <div class="skill-item">
+          <i class="fab fa-github"></i>
+          <div class="skill-title">Git & GitHub</div>
+          <div class="skill-desc">Version Control & Collaboration</div>
+        </div>
+        <div class="skill-item">
+          <i class="fab fa-linux"></i>
+          <div class="skill-title">Linux & Windows</div>
+          <div class="skill-desc">System Administration</div>
+        </div>
+        <div class="skill-item">
+          <i class="fas fa-shield-alt"></i>
+          <div class="skill-title">Cybersecurity</div>
+          <div class="skill-desc">Network & System Security</div>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 </html>
